--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 libc = "0.2.167"
 rand = "0.8.5"
+rand_distr = "0.4.3"
 rayon = "1.10.0"
 rdst = { version = "0.20.14" }
 rdxsort = "0.3.0"
